--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,14 +23,21 @@
     text-align: center;
     text-decoration: none;
     display: table;
+    border: 2px dashed white;
+    color: white;
+}
+
+.menu {
+
+}
+
+.menu__button {
     width: 190px;
     margin: 0 auto;
     padding: 15px;
     margin-bottom: 20px;
 
     background: rgb(255, 80, 1);
-    border: 2px dashed white;
-    color: white;
 
     box-shadow: 0 0 0 4px rgb(255, 80, 1);
     font-size: 150%;
@@ -51,7 +58,7 @@
     }
 }
 
-.play {
+.menu__button_play {
     animation: move-play 1s infinite;
 }
 
@@ -73,7 +80,7 @@
     opacity: 0.8;
 }
 
-.name {
+.page__title_main {
     text-align: center;
     font-size: 70pt;
     color: #7a3001;
@@ -98,7 +105,7 @@
     height: 95%;
 }
 
-.page-left {
+.page_type_left {
     margin-left: 5%;
     margin-right: 0%;
     border-radius: 10px 0px 0px 10px;
@@ -106,7 +113,7 @@
     width: 45%;
 }
 
-.page-right {
+.page_type_right {
     margin-left: 0%;
     margin-right: 5%;
     border-radius: 0px 10px 10px 0px;
@@ -114,7 +121,7 @@
     width: 45%;
 }
 
-.page-title {
+.page__title {
     text-align: center;
     font-size: 300%;
     color: #7a3001;
@@ -122,7 +129,7 @@
     letter-spacing: 2px;
 }
 
-.scoretable {
+.score-table {
     letter-spacing: 0px;
     margin: 30px 7%;
     width: 86%;
@@ -139,26 +146,26 @@
     margin: 0 auto;
 }
 
-.gold {
+.medal_type_gold {
     background-color: yellow;
     color: #d58512;
     border: 1px solid #d58512;
 
 }
 
-.silver {
+.medal_type_silver {
     background-color: rgba(220, 221, 212, 0.71);
     color: rgba(168, 169, 160, 0.71);
     border: 1px solid rgba(168, 169, 160, 0.71);
 }
 
-.bronze {
+.medal_type_bronze {
     background-color: rgba(243, 158, 0, 0.71);
     color: rgba(164, 106, 0, 0.71);
     border: 1px solid rgba(164, 106, 0, 0.71);
 }
 
-.other {
+.medal_type_other {
     background-color: transparent;
     color: black;
 }
@@ -169,7 +176,7 @@ th, td {
     font-size: 140%;
 }
 
-.single-page {
+.page_type_single {
     float: none;
     display: block;
     margin: auto;
@@ -179,14 +186,14 @@ th, td {
     width: 50%;
 }
 
-.button-submit {
+.button_type_submit {
     width: auto;
     height: auto;
     padding: 5px 10px;
     font-size: 15pt;
 }
 
-.input-label {
+.form__label {
     display: block;
     text-align: left;
     width: 60%;
@@ -217,11 +224,11 @@ input {
     height: 80%;
 }
 
-.input-block {
+.form__field {
     height: 15%;
 }
 
-.mini-button {
+.button_size_mini {
     font-size: 16pt;
     width: 25px;
     height: 25px;
@@ -235,13 +242,13 @@ input {
     opacity: 0.7;
 }
 
-.button-back {
+.button_type_back {
     position: absolute;
     background-color: rgb(255, 209, 1);
     box-shadow: 0 0 0 4px rgb(255, 209, 1);
 }
 
-.game-page {
+.page_type_game {
     width: 80%;
     margin-left: 10%;
     padding: 0;
@@ -251,19 +258,19 @@ canvas {
     position: absolute;
 }
 
-.palette-color {
+.palette__color {
     background-color: black;
     box-shadow: 0 0 0 4px black;
 }
 
 
-.paragraph {
+.page__paragraph {
     width: 85%;
     margin: 20px auto;
     font-size: 110%;
 }
 
-.page-subtitle {
+.page__subtitle {
     margin: 15px 10px;
     font-size: 150%;
     color: chocolate;
