--- a/static/css/image_croc.css
+++ b/static/css/image_croc.css
@@ -1,14 +1,24 @@
 :root {
-    //--crococolor: #5dea5d;
     --crococolor: #78F956;
 }
 
-.main {
+.croco-image {
     margin: 0 auto;
     position: relative;
-    //max-width: 400px;
     width: 320px;
     height: 320px;
+}
+
+@media (min-width: 1000px) {
+    .croco-image {
+        display: block;
+    }
+}
+
+@media (max-width: 1000px) {
+    .croco-image {
+        display: none;
+    }
 }
 
 .base {
@@ -19,7 +29,7 @@
     width: 33%;
     height: 75%;
     border-radius: 20px;
-    border-right: 1px solid black
+    border-right: 1px solid black;
 }
 
 .bottom {
@@ -56,7 +66,7 @@
     border-radius: 50%;
 }
 
-.iris {
+.eye__iris {
     position: absolute;
     background-color: var(--crococolor);
     width: 55%;
@@ -75,7 +85,7 @@
     75%{left: 37%;}
     100%{left: 27%;}
 }
-.dot {
+.eye__dot {
     position: absolute;
     background-color: var(--crococolor);
     width: 47%;
@@ -89,14 +99,13 @@
 
 .back {
     position: absolute;
-//background-color: red;
     top: 3%;
     left: 1%;
     width: 19%;
     height: 78%;
 }
 
-.spike {
+.back__spike {
     position: absolute;
     background-color: var(--crococolor);
     width: 50%;
@@ -105,45 +114,45 @@
     transform: rotate(45deg);
 }
 
-.spike1{
+.back__spike_number_1{
     top: 13%;
     left: 154%;
 }
 
-.spike2 {
+.back__spike_number_2 {
     top: 28%;
     left: 154%;
 }
 
-.spike3 {
+.back__spike_number_3 {
     top: 43%;
     left: 154%;
 }
 
-.spike4 {
+.back__spike_number_4 {
     top: 58%;
     left: 154%;
 }
 
-.spike5 {
+.back__spike_number_5 {
     top: 72%;
     left: 143%;
     transform: rotate(80deg);
 }
 
-.spike6 {
+.back__spike_number_6 {
     top: 80%;
     left: 100%;
     transform: rotate(24deg);
 }
 
-.spike7 {
+.back__spike_number_7 {
     top: 84%;
     left: 54%;
     transform: rotate(28deg);
 }
 
-.spike8 {
+.back__spike_number_8 {
     width: 35%;
     height: 8%;
     top: 87%;
@@ -165,24 +174,21 @@
     border-radius: 30px;
 }
 
-.leg1 {
+.leg {
     position: absolute;
     width: 14%;
     height: 19%;
     background-color: var(--crococolor);
     top: 75%;
-    left: 36%;
     border-radius: 10px;
 }
 
-.leg2 {
-    position: absolute;
-    width: 14%;
-    height: 19%;
-    background-color: var(--crococolor);
-    top: 75%;
+.leg_type_right {
+    left: 36%;
+}
+
+.leg_type_left {
     left: 56%;
-    border-radius: 10px;
 }
 
 .circle {
@@ -196,37 +202,35 @@
     transform: rotate(80deg);
 }
 
-.arm1 {
+.arm {
     position: absolute;
-    width: 10%;
-    height: 18%;
     background-color: var(--crococolor);
-    top: 44%;
-    left: 42%;
-    border-radius: 10px / 22px;
     border-left: 1px solid black;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
+    border-radius: 10px / 22px;
+}
+
+.arm_type_right {
+    width: 10%;
+    height: 18%;
+
+    top: 44%;
+    left: 42%;
+}
+
+.arm_type_left {
+    width: 324%;
+    height: 600%;
+    top: 0px;
+    left: -50%;
+    transform: rotate(-20deg);
 }
 
 @keyframes move {
     0%{transform: rotate(0deg);}
     50%{transform: rotate(-15deg)}
     100%{transform: rotate(0deg)}
-}
-
-.arm2 {
-    position: absolute;
-    width: 324%;
-    height: 600%;
-    background-color: var(--crococolor);
-    top: 0px;
-    left: -50%;
-    transform: rotate(-20deg);
-    border-radius: 10px / 22px;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
 }
 
 .brush {
@@ -251,7 +255,7 @@
     border-radius: 0 100% 100% 100%;
 }
 
-.rotate-arm {
+.rotate-part {
     position: absolute;
     top: 43%;
     left: 64%;
