--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,7 +131,7 @@
 
 .page {
     box-sizing: border-box;
-    background: linear-gradient(#bbb, transparent 1px), linear-gradient(90deg, #bbb, transparent 1px), linear-gradient(90deg, #ffbaba 2px, transparent 1px) repeat-y;
+    background: linear-gradient(#dbdbdb, transparent 1px), linear-gradient(90deg, #dbdbdb, transparent 1px), linear-gradient(90deg, #ffbaba 2px, transparent 1px) repeat-y;
     background-size: 15px 15px;
     min-width: 450px;
     position: relative;
@@ -282,17 +282,6 @@ th, td {
     font-size: 140%;
 }
 
-input {
-    width: 60%;
-    margin-left: 20%;
-    margin-top: 10px;
-    border-radius: 5px;
-    border: 1px solid #1b3751;
-    font-size: 13pt;
-    padding: 3px 10px;
-    background: #fefefe;
-}
-
 .some-picture {
     width: 120px;
     height: 120px;
@@ -306,6 +295,7 @@ input {
 
 .form__field {
     height: 15%;
+    margin-bottom: 20px;
 }
 
 .form__label {
@@ -315,6 +305,35 @@ input {
     margin-left: 18%;
     font-size: 14pt;
     color: #0c1e30;
+}
+
+.form__error {
+    text-align: left;
+    width: 60%;
+    margin-left: 18%;
+    font-size: 11pt;
+    color: #b1b1b1;
+}
+
+.form__input {
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    border: 1px solid;
+    font-size: 13pt;
+    padding: 3px 10px;
+    background: #fefefe;
+}
+
+.form__input_valid {
+    border-color: #1b3751;
+}
+
+.form__input_invalid {
+    border-color: #ff8787;
+    border-width: 2px;
 }
 
 canvas {
