--- a/static/blocks/user_area/user_area.pug
+++ b/static/blocks/user_area/user_area.pug
@@ -3,12 +3,12 @@ if authorized
     br
     span Рейтинг: #{score}
     br
-    a#js-index-logout Выйти
+    a#js-index-logout(href="#") Выйти
 else
     span Добро пожаловать!
-    a#js-index-login Авторизуйтесь
+    a#js-index-login(href="#") Авторизуйтесь
     br
     span или
-    a#js-index-signup зарегистрируйтесь
+    a#js-index-signup(href="#") зарегистрируйтесь
     span , чтобы начать играть!
 
