--- a/static/blocks/score_table/score_table.pug
+++ b/static/blocks/score_table/score_table.pug
@@ -10,7 +10,7 @@ for player in players
             else if player.number == 2
                 div.medal.medal_type_silver 2
             else if player.number == 3
-                dev.medal.medal_type_bronze 3
+                div.medal.medal_type_bronze 3
             else
                 div.medal.medal_type_other= player.number
         td= player.nickname
