added http module, registration, authorization, request scoretable

--- a/static/blocks/score_table/score_table.pug
+++ b/static/blocks/score_table/score_table.pug
@@ -13,5 +13,5 @@ for player in players
                 div.medal.medal_type_bronze 3
             else
                 div.medal.medal_type_other= player.number
-        td= player.nickname
-        td= player.score
+        td= player.login
+        td= player.rating
