added validation in form block

--- a/static/blocks/form/form.pug
+++ b/static/blocks/form/form.pug
@@ -1,4 +1,5 @@
 for field in fields
     p.form__field
         span.form__label= field.label
-        input.form__input.form__input_valid(placeholder = field.placeholder || "", type = field.type, id = field.id)
+        input.form__input.form__input_valid&attributes(field.attributes)
+        span.form__error
