--- a/static/blocks/user_area/user_area.pug
+++ b/static/blocks/user_area/user_area.pug
@@ -8,7 +8,7 @@ else
     span Добро пожаловать!
     a#js-index-login(href="#") Авторизуйтесь
     br
-    span или
+    span= "или "
     a#js-index-signup(href="#") зарегистрируйтесь
     span , чтобы начать играть!
 
