--- a/static/blocks/page/page.css
+++ b/static/blocks/page/page.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     background: linear-gradient(#dbdbdb, transparent 1px), linear-gradient(90deg, #dbdbdb, transparent 1px), linear-gradient(90deg, #ffbaba 2px, transparent 1px) repeat-y;
     background-size: 15px 15px;
-    min-width: 450px;
+    //min-width: 450px;
     position: relative;
     background-color: #fafafa;
     border-radius: 20px;
@@ -29,6 +29,7 @@
     margin-bottom: 1%;
     border-radius: 10px 10px 10px 10px;
     background-position: 10%;
+    padding-bottom: 20px;
 }
 
 .page_type_game {
@@ -37,9 +38,39 @@
     padding: 10px;
 }
 
+.page__title {
+    text-align: center;
+    font-size: 300%;
+    color: #7a3001;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
+}
+
+.page__title_main {
+    text-align: center;
+    font-size: 500%;
+    color: #7a3001;
+    font-family: 'Pangolin', cursive;
+    margin-top: 10px;
+}
+
+.page__notification {
+    margin: auto;
+    width: 70%;
+    text-align: center;
+    border-radius: 10px;
+    border: 1px solid #a6ff8e;
+    padding: 5px;
+    color: black;
+    font-size: 110%;
+    background-color: #d8ffce;
+    opacity: 0.7;
+}
+
 @media screen and (min-width: 1000px) {
     .page {
-        //height: 95%;
+    //height: 95%;
         min-height: 650px;
     }
     .page_type_left {
@@ -71,39 +102,28 @@
         height: auto;
     }
     .page_type_left {
-        border-radius: 10px;
+        border-radius: 10px 10px 0px 0px;
+        margin-bottom: 0;
+        border-bottom: none;
     }
     .page_type_right {
-        border-radius: 10px;
+        border-radius: 0px 0px 10px 10px;
+        background-position: 10%;
+        margin-top: 0;
+        border-top: none;
     }
 }
 
-.page__title {
-    text-align: center;
-    font-size: 300%;
-    color: #7a3001;
-    margin-top: 10px;
-    margin-bottom: 30px;
-    letter-spacing: 2px;
-}
-
-.page__title_main {
-    text-align: center;
-    font-size: 70pt;
-    color: #7a3001;
-    font-family: 'Pangolin', cursive;
-    margin-top: 10px;
-}
-
-.page__notification {
-    margin: auto;
-    width: 70%;
-    text-align: center;
-    border-radius: 10px;
-    border: 1px solid #a6ff8e;
-    padding: 5px;
-    color: black;
-    font-size: 110%;
-    background-color: #d8ffce;
-    opacity: 0.7;
+@media screen and (max-width: 500px) {
+    .page {
+        margin: 0;
+        width: 100%;
+        font-size: 50%;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .page_type_left {
+    }
+    .page_type_right {
+    }
 }
