--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,3 +20,21 @@ a {
     color: #0c1e30;
     text-decoration: underline;
 }
+
+
+::-webkit-scrollbar{
+    width:8px;
+}
+
+::-webkit-scrollbar-thumb{
+    border-width:1px 1px 1px 2px;
+    border-color: #777;
+    background-color: #bdbdbd;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    border-width: 1px 1px 1px 2px;
+    border-color: #555;
+    background-color: #8f8f8f;
+}
