--- a/static/blocks/page/page.css
+++ b/static/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
+    z-index: 1;
     box-sizing: border-box;
     background: linear-gradient(#dbdbdb, transparent 1px), linear-gradient(90deg, #dbdbdb, transparent 1px), linear-gradient(90deg, #ffbaba 2px, transparent 1px) repeat-y;
     background-size: 15px 15px;
