--- a/static/blocks/chat/chat.css
+++ b/static/blocks/chat/chat.css
@@ -1,13 +1,14 @@
 .chat {
     display: inline-block;
     float: left;
-    margin: 4% 3% 1% 1%;
+    margin: 1% 3% 1% 1%;
 }
 
 .chat__list {
     background-color: #fafbf2;
     overflow-y: scroll;
     overflow-x: hidden;
+    word-wrap: break-word;
     margin-top: 4%;
     display: block;
 }
