--- a/static/blocks/canvas/canvas.css
+++ b/static/blocks/canvas/canvas.css
@@ -4,9 +4,16 @@ canvas {
     margin: 2% 1% 1% 4%;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 700px) {
     canvas {
         width: 65%;
         height: 500px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    canvas {
+        width: 100%;
+        height: 400px;
     }
 }
