--- a/static/blocks/text_paragraph/text_paragraph.css
+++ b/static/blocks/text_paragraph/text_paragraph.css
@@ -2,10 +2,11 @@
     width: 85%;
     margin: 20px auto;
     font-size: 110%;
+    line-height: 150%;
 }
 
 .paragraph__title {
-    margin: 15px 10px;
+    margin: 35px 10px;
     font-size: 150%;
     color: chocolate;
 }
