--- a/static/blocks/text_paragraph/text_paragraph.scss
+++ b/static/blocks/text_paragraph/text_paragraph.scss
@@ -3,9 +3,15 @@
     margin: 20px auto;
     font-size: 110%;
     line-height: 150%;
+    @media screen and (max-width: 700px) {
+        font-size: 200%;
+    }
     &__title {
         margin: 35px 10px;
         font-size: 150%;
         color: chocolate;
+        @media screen and (max-width: 700px) {
+            font-size: 200%;
+        }
     }
 }
