--- a/static/blocks/canvas/canvas.scss
+++ b/static/blocks/canvas/canvas.scss
@@ -10,15 +10,19 @@ canvas {
         width: 100%;
         height: 400px;
     }
-    &__result {
-        position: absolute;
-        border-radius: 20px;
-        border: 1px solid black;
-        text-align: center;
-        font-size: 200%;
-        left: 17%;
-        top: 35%;
-        padding: 30px;
-        width: 30%;
+}
+
+.canvas__result {
+    position: absolute;
+    border-radius: 20px;
+    border: 1px solid black;
+    text-align: center;
+    font-size: 200%;
+    left: 17%;
+    top: 35%;
+    padding: 30px;
+    width: 30%;
+    @media screen and (max-width: 700px) {
+        left: 26%;
     }
 }
