--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,10 @@ body {
     user-select: none;
 }
 
+html, body, #js-index, #js-leaderboard, #js-game, #js-signup, #js-login {
+    height: 100%;
+}
+
 .background {
     top: 0;
     left: 0;
@@ -14,6 +18,7 @@ body {
     letter-spacing: 3px;
     position: absolute;
     z-index: 1;
+    height: 100%;
 }
 
 .palette__color {
