--- a/static/blocks/preloader/preloader.scss
+++ b/static/blocks/preloader/preloader.scss
@@ -18,7 +18,7 @@
     height: 23%;
     animation: appear 0.91s infinite;
     &_color_purple {
-      transform: rotate(0+deg);
+      transform: rotate(0deg);
     }
     &_color_blue {
       transform: rotate(51deg);
