--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -7,6 +7,17 @@ body {
 
 html, body, .fix-height {
     height: 100%;
+    width: 100%;
+}
+
+@media (max-width: 700px) {
+    body {
+        position:fixed;
+    }
+}
+
+@viewport {
+    user-zoom: fixed;
 }
 
 .background {
