--- a/static/blocks/chat/chat.scss
+++ b/static/blocks/chat/chat.scss
@@ -4,10 +4,14 @@ $x-red: #ff7369;
 .chat {
     display: inline-block;
     float: left;
-    margin: 1% 3% 1% 1%;
+    margin: 1% 0% 0% 1%;
+    position: relative;
     @media screen and (min-width: 700px) {
-        width: 25%;
-        height: 550px;
+        width: 29%;
+        height: 80%;
+    }
+    @media screen and (max-width: 700px) {
+        width: 100%;
     }
     &__list {
         background-color: #fafbf2;
@@ -16,8 +20,13 @@ $x-red: #ff7369;
         word-wrap: break-word;
         margin-top: 4%;
         display: block;
-        @media screen and (min-width: 700px) {
-            height: 500px;
+        height: 100%;
+        position: relative;
+        @media screen and (min-width: 1000px) {
+            min-height: 480px;
+        }
+        @media screen and (max-width: 1000px) {
+            min-height: 510px;
         }
         @media screen and (max-width: 700px) {
             display: none;
@@ -67,7 +76,7 @@ $x-red: #ff7369;
         }
     }
     &__message {
-        margin: 5%;
+        margin: 3px;
     }
     &__vote {
         width: 18px;
@@ -94,6 +103,9 @@ $x-red: #ff7369;
         &:hover {
             color: $x-red;
         }
+    }
+    &__info {
+        cursor: default;
     }
 }
 
