--- a/static/blocks/page/page.scss
+++ b/static/blocks/page/page.scss
@@ -105,6 +105,8 @@
             margin-left: 2%;
             padding: 5px;
             height: 100%;
+            margin-bottom: 0px;
+            margin-top: 0px;
         }
         @media screen and (max-width: 700px) {
             width: 100%;
