--- a/static/blocks/shadow/shadow.scss
+++ b/static/blocks/shadow/shadow.scss
@@ -4,7 +4,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     background-color: black;
     opacity: 0.4;
 }
