fixed ws closing, chat size

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,8 +1,7 @@
-/*@import url('https://fonts.googleapis.com/css?family=Pangolin&subset=cyrillic');*/
-
 body {
     margin: 0;
     user-select: none;
+    cursor: default;
 }
 
 html, body, .fix-height {
