--- a/static/blocks/chat/chat.scss
+++ b/static/blocks/chat/chat.scss
@@ -6,9 +6,10 @@ $x-red: #ff7369;
     float: left;
     margin: 1% 0% 0% 1%;
     position: relative;
+    max-height: 1000px;
     @media screen and (min-width: 700px) {
         width: 29%;
-        height: 80%;
+        height: 90%;
     }
     @media screen and (max-width: 700px) {
         width: 100%;
