--- a/static/blocks/button/button.scss
+++ b/static/blocks/button/button.scss
@@ -1,5 +1,6 @@
 $x-orange: rgb(255, 80, 1);
 $x-yellow: rgb(255, 209, 1);
+$x-orange-light: #ff841d;
 $size_m: 35px;
 $count: 5/7;
 
@@ -50,6 +51,13 @@ $count: 5/7;
         @media screen and (max-height: 700px){
             margin-top: 5px;
         }
+    }
+    &_type_clear {
+        background: $x-orange-light;
+        box-shadow: 0 0 0 3px $x-orange-light;
+        border-radius: 5px;
+        margin: auto;
+        position: absolute;
     }
 
 }
