--- a/static/blocks/timer/timer.scss
+++ b/static/blocks/timer/timer.scss
@@ -4,4 +4,7 @@
     color: black;
     font-size: 150%;
     margin-top: 20px;
+    @media screen and (max-width: 500px) {
+        font-size: 270%;
+    }
 }
